I didn't need to do that but I did

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7846,8 +7846,8 @@ span.halffixedflex,
 		width         : auto;
 		height        : auto;
 		padding-right : 2px;
+		margin-top    : 0;
 	}
-
 
 	#toprow #helpbutton a {
 		padding   : 4px;
@@ -8198,6 +8198,17 @@ span.halffixedflex,
 		top    : -15px;
 		width  : 100%;
 		height : auto;
+	}
+
+	#toprow a.fa.fa-sm {
+		margin-top    : 0;
+		padding-right: 3px;
+	}
+
+	#toprow a#tabroom_inbox {
+		padding-right : 6px;
+		margin-top    : 0;
+		padding-left  : 6px;
 	}
 }
 
