CSS for 1100 did not respect mainfull

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7597,6 +7597,11 @@ span.halffixedflex,
 		width: 72%;
 	}
 
+	.main.mainfull {
+		width : 96%;
+		float : none;
+	}
+
 	.menu {
 		width: 28%;
 	}
