drag and drop annoyances

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1885,7 +1885,7 @@ td.droppable.smallerdrop {
 .sidenote .draggable,
 .sidenote.full .draggable,
 .sidenote .full .draggable {
-	width          : 42%;
+	width          : 49%;
 	padding-top    : 4px;
 	padding-bottom : 4px;
 	margin-bottom  : 2px;
@@ -1910,7 +1910,7 @@ td.droppable.smallerdrop {
 	line-height    : 16px;
 	cursor         : pointer;
 	background     : url("/lib/images/ui-bg_highlight-hard_100_eeeeee_1x100.png") repeat-x scroll 50% 50% rgb(238, 238, 238);
-	z-index        : 999;
+	z-index        : 99;
 }
 
 .fixedwidthlarger .draggable {
@@ -4955,8 +4955,8 @@ a.block {
 	width           : 100%;
     display         : flex;
     flex-flow       : row;
-	align-items     : center;
 	justify-content : space-between;
+	align-content   : flex-start;
 }
 
 .sidenote a.flexrow.half,
