Checker responsive mode

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7686,6 +7686,10 @@ span.halffixedflex,
 		word-break  : break-word;
 	}
 
+	.centeralign .tablesorter-header-inner {
+		align-items : center;
+	}
+
 	h2 {
 		font-size: 2.0em;
 	}
@@ -7959,8 +7963,45 @@ span.halffixedflex,
 	flex-flow  : row-reverse;
 }
 
+.smallshow {
+	display : none;
+}
 
 @media only screen and (max-width: 700px) {
+
+	.confirmations span.fa,
+	.judgefixedheight span.fa {
+		font-size: 14pt;
+		min-width: 32px;
+	}
+
+	.entries span.smaller,
+	.confirmations span.smaller,
+	.judgefixedheight span.smaller {
+		font-size: 14px;
+	}
+
+	.judgefixedheight {
+		height: 28px !important;
+	}
+
+	.tablesorter-header-inner {
+		height      : auto;
+		width       : auto;
+		min-width   : 32px;
+	}
+
+	.smallwrap {
+		white-space   : wrap;
+	}
+
+	.smallhide {
+		display : none;
+	}
+
+	.smallshow {
+		display : inline-block;
+	}
 
 	#toprow a#push-bell.redtext, #toprow a#push-bell.redtext:hover {
 		border-width : 2px;
@@ -8024,6 +8065,10 @@ span.halffixedflex,
 		word-break   : break-all;
 		word-wrap    : break-word;
 		width        : 100%;
+	}
+
+	table.unfixed {
+		table-layout : auto;
 	}
 
 	#toprow a#tabroom_edlee {
