--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -5768,6 +5768,62 @@ way to fit your requirements.
 	z-index  : 200;
 }
 
+#nav li div.megamenu {
+	display: none;
+}
+
+#nav li:hover div.megamenu {
+	position        : absolute;
+	background      : var(--border-gray);
+	height          : auto;
+	z-index         : 300;
+	position        : absolute;
+	box-sizing      : border-box;
+	padding-left    : 4px;
+	padding-right   : 4px;
+	padding-top     : 4px;
+	padding-bottom  : 16px;
+	border          : 2px solid var(--dark-blue);
+	display         : flex;
+	flex-direction  : row;
+	justify-content : space-between;
+	gap             : 4px;
+}
+
+#nav li:hover div.megamenu span.grow {
+	display         : flex;
+	flex-direction  : column;
+	align-items     : center;
+	white-space     : normal;
+}
+
+#nav li:hover div.megamenu a.newcode {
+	border-top: 2px solid var(--light-orange);
+}
+
+#nav li:hover div.megamenu a {
+
+	display        : block;
+	text-align     : center;
+	width          : 100%;
+	padding-top    : 2px;
+	padding-bottom : 4px;
+	box-sizing     : border-box;
+	color          : var(--darker-blue);
+	background     : var(--lightest-gray);
+	border         : 1px solid var(--medium-gray);
+	border-top     : 3px solid white;
+	margin-bottom  : 2px;
+	border-radius  : 4px;
+	width          : 94px;
+}
+
+#nav li:hover div.megamenu a:hover {
+	color            : var(--lightest-gray);
+	background-color : var(--darker-blue);
+	border-color	 : var(--darker-blue);
+}
+
 #nav li:hover ul.sub {
 	left        : -8px;
 	top         : 34px;
