Minor last tweak

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -5788,6 +5788,7 @@ way to fit your requirements.
 	flex-direction  : row;
 	justify-content : space-between;
 	gap             : 4px;
+	min-height      : 32vh;
 }
 
 #nav li:hover div.megamenu span.grow {
@@ -5802,7 +5803,6 @@ way to fit your requirements.
 }
 
 #nav li:hover div.megamenu a {
-
 	display        : block;
 	text-align     : center;
 	width          : 100%;
