status board tweak full size

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -8023,6 +8023,18 @@ span.halffixedflex,
 	display : none;
 }
 
+#campus_debate th {
+	min-width: 32px;
+}
+
+#campus_debate th .fa {
+	padding-left: 4px;
+}
+
+#campus_debate span.padless {
+	padding: 2px !important;
+}
+
 @media only screen and (max-width: 700px) {
 
 	.confirmations span.fa,
