Across and beyond

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7529,6 +7529,11 @@ span.halffixedflex,
 		width: 72%;
 	}
 
+	.mainfull {
+		float : none;
+		width : 96%;
+	}
+
 	.menu {
 		width: 28%;
 	}
@@ -8187,7 +8192,7 @@ span.halffixedflex,
 		color: var(--darker-blue);
 	}
 
-	.main {
+	.main, .mainfull {
 		padding-left : 4px;
 		width        : 98%;
 	}
