Campus and ZOom mixed can reassign site

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -744,6 +744,14 @@ td.smaller.doublespace {
 	line-height : 1.4em;
 }
 
+em {
+	display        : inline;
+	font-style     : italic;
+	margin         : 0;
+	padding        : 0;
+	vertical-align : baseline;
+}
+
 ol {
 	list-style  : decimal;
  	margin-left : 40px;
