Double score counter flaw with team points enabled

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1186,10 +1186,16 @@ span.flex,
 div.flex {
     display         : flex !important;
     flex-flow       : column;
-	justify-content : stretch;
+	justify-content : space-evenly;
+	height          : 100%;
     padding         : 0;
     margin          : 0;
-    flex-grow       : 1;
+}
+
+.flexcolumn:after,
+.flex:after {
+	content: none;
+
 }
 
 span.fixedflex,
@@ -1242,6 +1248,7 @@ span.halffixedflex,
     vertical-align : middle;
 	line-height    : 22px;
 }
+
 .judgefixedheight {
 	height: 20px !important;
 }
@@ -1696,6 +1703,12 @@ td  {
 	vertical-align : middle;
 	padding        : 8px;
 	box-sizing     : border-box;
+}
+
+td.flexbin  {
+	height  : 1px;
+	padding : 0;
+	margin  : 0;
 }
 
 tr.nospace td,
