That was the dumbest bug I've killed in a long long time.  Plus, some responsiveness

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -381,7 +381,7 @@ img.badgetiny {
 	padding          : 4px;
 }
 
-div#push-overlay {
+div#push-overlay, .push-overlay {
 	width            : 100%;
 	height           : 100vh;
 	text-align       : center;
@@ -392,7 +392,25 @@ div#push-overlay {
 	z-index          : 750;
 }
 
-div#push-subscribe {
+div.push-warning {
+	box-sizing       : border-box;
+	white-space      : normal;
+	z-index          : 1000;
+	float            : none;
+	width            : 75%;
+	padding          : 16px;
+	padding-left     : 10%;
+	padding-right    : 10%;
+	background-color : var(--lightest-gray);
+	border           : 1px solid var(--medium-red);
+	border-radius    : 12px;
+	margin-top       : 12%;
+	margin-left      : auto;
+	margin-right     : auto;
+}
+
+div#push-subscribe,
+div.push-subscribe {
 	box-sizing       : border-box;
 	white-space      : normal;
 	z-index          : 1000;
@@ -1236,9 +1254,10 @@ span.halffixedflex,
 }
 
 .judgeheight {
+	box-sizing : border-box;
 	height        : 25px !important;
-	margin        : 0 !important;
-	padding       : 0 !important;
+	margin        : 0;
+	padding       : 0;
 	overflow      : hidden;
 	line-height   : 24px;
 }
@@ -1257,11 +1276,20 @@ span.halffixedflex,
 }
 
 .fixedheight {
-	box-sizing : border-box;
-	height     : 45px !important;
-	min-height : 45px !important;
-	max-height : 45px !important;
-	margin     : 0;
+	box-sizing     : border-box;
+	height         : 45px !important;
+	margin         : 0;
+	padding        : 0;
+	overflow       : hidden;
+	line-height    : 22px;
+	display        : inline-flex;
+	flex-direction : column;
+}
+
+.fixedheight div, .fixedheight .span {
+	font-weight    : 600px;
+    vertical-align : middle;
+	line-height    : 22px;
 }
 
 .halfheight {
@@ -1693,7 +1721,7 @@ table.fixed,
 table.fixedtable,
 table.fixtable {
 	table-layout : fixed;
-	word-break   : break-all;
+	word-break   : break-word;
 	word-wrap    : break-word;
 	width        : 100%;
 }
@@ -7630,7 +7658,7 @@ span.halffixedflex,
 
 	table {
 		width      : 100%;
-		word-break : break-all;
+		word-break : break-word;
 	}
 
 	#header {
@@ -7783,7 +7811,7 @@ span.halffixedflex,
 
 	table {
 		width      : 100%;
-		word-break : break-all;
+		word-break : break-word;
 	}
 
 	.splitpage .truehalf {
@@ -8084,8 +8112,29 @@ span.halffixedflex,
 		min-width   : 32px;
 	}
 
+	.smallwrap div.flexrow span {
+		width          : 100%;
+		padding        : 0;
+		margin         : 0;
+		padding-bottom : 1px;
+		font-size      : 92%;
+		text-align     : center;
+	}
+
+	.medcell {
+		width: 64px;
+	}
+	.smallishcell {
+		width: 32px;
+	}
+	.smallcell {
+		width: 16px;
+	}
+
 	.smallwrap {
-		white-space   : wrap;
+		white-space : wrap;
+		word-wrap   : break-word;
+		word-break  : break-word;
 	}
 
 	.smallhide {
@@ -8155,7 +8204,7 @@ span.halffixedflex,
 
 	table {
 		table-layout : fixed;
-		word-break   : break-all;
+		word-break   : break-word;
 		word-wrap    : break-word;
 		width        : 100%;
 	}
@@ -8355,4 +8404,14 @@ span.halffixedflex,
 	}
 }
 
+@media only screen and (max-width: 500px) {
+	.medcell {
+		width: 32px;
+	}
+
+	.smallishcell,
+	.smallcell {
+		width: 16px;
+	}
+}
 
