Highlight missing codes.  Show a little more responsiveness.

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1989,6 +1989,10 @@ td .draggable{
 	width      : 93%;
 }
 
+td.entries a.button {
+	margin-top: 0;
+}
+
 th.sortdown {
 	background-image : url("/lib/images/sort-asc.gif");
 }
