Stable rooms checker

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7253,7 +7253,7 @@ td.flex.top,
 .sidenote div.flexrow .leftalign,
 .sidenote div.flexrow.leftalign,
 .flexrow.leftalign {
-	justify-content: left;
+	justify-content: flex-start;
 }
 
 .flexrow * {
