Tweak the speech pairing

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3503,7 +3503,7 @@ a.printbutton.buttonwhite {
 
 .mainfull {
 	float : none;
-	width : 96%;
+	width : 98%;
 }
 
 .menu {
@@ -5009,6 +5009,43 @@ a.block {
     flex-flow       : row;
 	justify-content : space-between;
 	align-content   : flex-start;
+}
+
+
+.flexfull {
+	flex-basis: 100%;
+	min-width: .01vh;
+}
+
+.flexthreequarters {
+	flex-basis : 75%;
+	flex-grow  : 2;
+	min-width: .01vh;
+}
+
+.flexhalf {
+	flex-basis: 50%;
+	min-width: .01vh;
+}
+.flexthird {
+	flex-basis: 33.3%;
+	min-width: .01vh;
+}
+
+.flexquarter {
+	flex-basis: 25%;
+	min-width: .01vh;
+}
+
+.flexfifth {
+	flex-basis: 20%;
+}
+
+.flexseventh {
+	flex-basis: 14.28%;
+}
+.flextenth {
+	flex-basis: 10%;
 }
 
 .sidenote a.flexrow.half,
@@ -7583,7 +7620,7 @@ span.halffixedflex,
 
 	.mainfull {
 		float : none;
-		width : 96%;
+		width : 99%;
 	}
 
 	.menu {
@@ -7711,7 +7748,7 @@ span.halffixedflex,
 	}
 
 	.main.mainfull {
-		width : 96%;
+		width : 99%;
 		float : none;
 	}
 
@@ -8266,7 +8303,7 @@ span.halffixedflex,
 	}
 
 	.main, .mainfull {
-		padding-left : 4px;
+		padding-left : 1%;
 		width        : 98%;
 	}
 
