--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1786,6 +1786,10 @@ th {
 	font-weight    : 600;
 }
 
+th.limiticon {
+	min-width: 32px;
+}
+
 th.rotate {
   height         : 120px;
   white-space    : nowrap;
