Chapter perms check tighter.  No date changes after 10 days

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -114,6 +114,11 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     margin: 0;
 }
 
+input[type="text"].even {
+	background-color : var(--light-gray);
+	font-style     : italic;
+}
+
 input[type="text"].truefull,
 input[type="password"].truefull,
 input[type="url"].truefull,
