--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -5283,17 +5283,21 @@ tr.padless td {
 	padding: 2px;
 }
 
-.bigger {
+.bigger, .bigger p {
 	font-size   : 16px;
 	line-height : 16px;
 }
 
-.biggish {
+p.bigger,.bigger p {
+	line-height : 1.4em;
+}
+
+.biggish, .biggish p {
 	font-size   : 14px;
 	line-height : 16px;
 }
 
-p.biggish {
+p.biggish, .biggish p {
 	line-height : 20px;
 }
 
@@ -5479,9 +5483,6 @@ span.huge span {
 	font-size: 132%;
 }
 
-p.bigger {
-	line-height : 1.4em;
-}
 
 .sidenote p.bigger,
 .sidenote a.bigger,
