some CRF protection around account creation and deletion.

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -649,7 +649,6 @@ button::-moz-focus-inner{
 	padding       : 8px 8px 4px;
 	margin-top    : 6px;
 	margin-bottom : 6px;
-	width         : 84%;
 }
 
 input[type="text"].borderred {
@@ -658,14 +657,14 @@ input[type="text"].borderred {
 
 #login-box input[type="submit"] {
 	background-color : var(--darker-blue);
-	font             : 16px "Inconsolata";
-	font-weight      : 600;
+	font-weight      : 900;
 	color            : var(--background-white);
-	padding-top      : 8px;
-	padding-bottom   : 8px;
-	padding-right    : 16px;
-	margin-top       : 8px;
+	margin           : 0;
+	margin-top       : 4px;
+	margin-bottom    : 4px;
+	min-height       : 32px;
 	text-align       : right;
+	width            : 100%;
 }
 
 tr.redtext td,
