Some format simplier

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -13,6 +13,7 @@
 
 :root {
 
+    --blinding-white : #ffffff;
     --background-white : #fefefe;
 
 	--background-blue : #009CD4;
@@ -28,6 +29,7 @@
 	--dark-red     : #BA1D00;
 	--darker-red   : #8E1600;
 
+	--barely-yellow   : #fef8ef;
 	--lightest-yellow : #FFECBD;
 	--light-yellow    : #FFDB84;
 	--medium-yellow   : #FFD267;
@@ -1721,10 +1723,6 @@ table {
 	width          : 100%;
 }
 
-thead, tbody {
-	width: 100%;
-}
-
 table.fixed,
 table.fixedtable,
 table.fixtable {
@@ -1732,6 +1730,21 @@ table.fixtable {
 	word-break   : break-word;
 	word-wrap    : break-word;
 	width        : 100%;
+}
+
+div.sidescroll {
+	width       : 100%;
+	overflow-x  : scroll;
+	white-space : nowrap;
+}
+
+table.hasResizable {
+	width: 100% !important;
+}
+
+table.hasResizable tr td,
+table.hasResizable tr th {
+	overflow  : hidden;
 }
 
 td  {
@@ -1893,7 +1906,7 @@ td.more {
 
 th.sortable {
 	background    : url("/lib/images/sort-bg.gif") no-repeat right;
-	padding-right : 15px;
+	padding-right : 16px;
 }
 
 .droppable {
@@ -2035,6 +2048,13 @@ th.nosort, th.hidesort {
 	background-color : var(--light-gray) !important;
 	border-top       : 1px solid var(--border-gray) !important;
 	border-bottom    : 1px solid var(--border-gray) !important;
+}
+
+tr.odd:hover {
+	background-color : var(--barely-yellow);
+}
+tr.even:hover {
+	background-color: #f7efe3;
 }
 
 tr.odd.evenforce td,
@@ -2613,9 +2633,12 @@ td a.white, td a.plain {
 	background-color : var(--lightest-blue);
 }
 
-.hover:hover,
-.white:hover {
+.hover:hover {
 	background-color : var(--lightest-blue);
+}
+a.white:hover {
+	text-decoration: underline dotted var(--light-blue);
+	color: var(--darker-blue);
 }
 
 .green.hover:hover {
@@ -7334,6 +7357,7 @@ td.flex.top,
 	padding     : 0;
 	width       : 100%;
 	display     : block;
+	overflow    : hidden;
 }
 
 .tablesorter-header-inner {
@@ -7343,6 +7367,15 @@ td.flex.top,
 	display     : flex;
     flex-grow   : 1;
 	align-items : center;
+	overflow    : hidden;
+}
+
+.fixedheader .tablesorter-header-inner {
+	height      : 1.2em;
+	padding-top : .2em;
+	align-items : flex-start;
+	overflow    : hidden;
+	word-break  : break-word;
 }
 
 td.flex,
@@ -7652,9 +7685,10 @@ span.halffixedflex,
 	}
 
 	.tablesorter-header-inner {
-		height      : 1.4em;
+		height      : 1.2em;
+		padding-top : .2em;
 		align-items : flex-start;
-		overflow-y  : hidden;
+		overflow    : hidden;
 		word-break  : break-word;
 	}
 
@@ -7843,9 +7877,10 @@ span.halffixedflex,
 	}
 
 	.tablesorter-header-inner {
-		height      : 1.4em;
+		height      : 1.2em;
+		padding-top : .2em;
 		align-items : flex-start;
-		overflow-y  : hidden;
+		overflow    : hidden;
 		word-break  : break-word;
 	}
 
@@ -7870,6 +7905,26 @@ span.halffixedflex,
 
 	.splitpage .truehalf {
 		width : 49.5%;
+	}
+
+	.flexkids>label>span,
+	.flexkids>label>div,
+	.flexkids>span,
+	.flexkids>div,
+	.flexfull, .fullflex,
+	.flexfull>div, .fullflex>div,
+	.flexfull>span, .fullflex>span,
+	.flexfull>label>div, .fullflex>label>div,
+	.flexfull>label>span, .fullflex>label>span,
+	.flexrow {
+
+		.pagethird {
+			width : 50%;
+		}
+
+		.smallfull {
+			width : 100%;
+		}
 	}
 
 	.splitpage .pagehalf,
@@ -8161,9 +8216,18 @@ span.halffixedflex,
 	}
 
 	.tablesorter-header-inner {
-		height      : auto;
-		width       : auto;
-		min-width   : 32px;
+		height    : auto;
+		width     : auto;
+		min-width : 32px;
+		overflow  : hidden;
+	}
+
+	tr.fixedheader th .tablesorter-header-inner {
+		height      : 1.2em;
+		padding-top : 1px;
+		padding-left: 4px;
+		align-items : flex-start;
+		word-break  : break-word;
 	}
 
 	.smallwrap div.flexrow span {
@@ -8195,6 +8259,9 @@ span.halffixedflex,
 		display : none;
 	}
 
+	.smallfull {
+		width : 100%;
+	}
 	.smallshow {
 		display : inline-block;
 	}
@@ -8456,6 +8523,30 @@ span.halffixedflex,
 		margin-top    : 0;
 		padding-left  : 6px;
 	}
+
+	div.megamenu {
+		width : 96vw !important;
+		position: absolute;
+		left: 0;
+	}
+
+	#nav li:hover div.megamenu a {
+		display        : block;
+		text-align     : center;
+		width          : 100%;
+		box-sizing     : border-box;
+		color          : var(--darker-blue);
+		background     : var(--lightest-gray);
+		border         : 1px solid var(--medium-gray);
+		border-top     : 3px solid white;
+		margin-bottom  : 2px;
+		border-radius  : 4px;
+		font-size      : 160%;
+		padding-top    : 4px;
+		padding-bottom : 8px;
+		margin-top     : 4px;
+	}
+
 }
 
 @media only screen and (max-width: 500px) {
