So much the superior

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1974,7 +1974,7 @@ td.droppable.smallerdrop {
 
 .draggable {
 	border         : 1px solid var(--dark-blue);
-	font-size      : 10px;
+	font-size      : 11px;
 	width          : 45%;
 	max-width      : 128px;
 	display        : inline-block;
@@ -7226,11 +7226,9 @@ li.select2-results__option {
 	justify-content : space-between;
 }
 
-
 .full.row * {
 	flex-grow: 1;
 }
-
 
 .sidenote .row {
     padding: 4px;
@@ -7331,6 +7329,10 @@ td.flex.top,
 
 .flexrow * {
 	box-sizing : border-box;
+}
+
+.flexgrow * {
+    flex-grow : 1;
 }
 
 .switch,
