--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -34,6 +34,7 @@
 	--light-yellow    : #FFDB84;
 	--medium-yellow   : #FFD267;
 	--dark-yellow     : #FFB400;
+	--medium-brown    : #a0522d;
 
 	--lightest-gray : #fafafa;
 	--light-gray    : #eaeaea;
@@ -3113,7 +3114,7 @@ input[type="submit"].purpletext {
 }
 
 .orangetext {
-	color : var(--dark-orange);
+	color : var(--medium-orange);
 }
 
 .bluetext {
@@ -3122,6 +3123,10 @@ input[type="submit"].purpletext {
 
 .yellowtext {
 	color : var(--dark-yellow);
+}
+
+.browntext {
+	color : var(--medium-brown);
 }
 
 .lightyellowtext {
@@ -3336,11 +3341,23 @@ a.buttonwhite.smaller {
 	border-color     : var(--medium-purple);
 }
 
+.buttonwhite.browntext {
+	color  : var(--medium-brown);
+	border : 2px solid var(--medium-brown);
+}
+
+.browntext.invert,
+.buttonwhite.browntext.invert,
+.buttonwhite.browntext:hover {
+	background-color : var(--medium-brown);
+	border           : 2px solid var(--medium-brown);
+	color            : var(--background-white);
+}
 
 .orangetext.invert,
 .marballot .judgebutton.orangetext.invert,
 .judgebutton.orangetext.invert {
-	background-color : var(--dark-orange);
+	background-color : var(--medium-orange);
 	color            : var(--background-white);
 }
 
@@ -3348,7 +3365,7 @@ a.buttonwhite.smaller {
 .orangetext.buttonwhite {
 	border: 2px solid var(--dark-orange);
 	background-color : var(--background-white);
-	color: var(--dark-orange);
+	color: var(--medium-orange);
 }
 
 .marballot .judgebutton.redtext.invert {
@@ -3361,7 +3378,7 @@ a.buttonwhite.smaller {
 
 .orangetext.buttonwhite:hover,
 .orangetext.buttonwhite.invert {
-	background-color : var(--dark-orange);
+	background-color : var(--medium-orange);
 	border-color     : var(--light-orange);
 	color            : var(--background-white);
 }
@@ -7335,6 +7352,11 @@ td.flex.top,
     flex-grow : 1;
 }
 
+.full.row .nogrow,
+.flexgrow .nogrow,
+.nogrow{
+    flex-grow : 0;
+}
 .switch,
 .optionslider {
 	box-sizing    : unset;
