--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1720,7 +1720,8 @@ h6.normal {
 /* Table styling */
 
 table {
-	border-spacing : 1px;
+	margin-top     : 2px;
+	border-spacing : .5px;
 	width          : 100%;
 }
 
@@ -1789,6 +1790,13 @@ tr.fixed {
 tr.fixed td, tr.fixed th {
 	padding-top		: 2px;
 	padding-bottom	: 2px;
+}
+
+tr.yellowrow th {
+	border-top    : 1px solid var(--dark-yellow);
+	border-left   : 1px solid var(--medium-yellow);
+	border-right  : 1px solid var(--medium-yellow);
+	border-bottom : 2px solid var(--medium-yellow);
 }
 
 tr.yellowrow.rotation th {
@@ -2134,6 +2142,11 @@ tr.even.oddforce td,
 .liblrow.yellowhover:hover, .libl.yellowhover:hover  {
 	background-color : var(--lightest-yellow);
 }
+
+thead {
+	border-top: 1px solid var(--dark-red);
+}
+
 .yellowrow  {
 	background-color : var(--lightest-yellow);
 }
