--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7205,6 +7205,10 @@ li.select2-results__option {
 	padding-bottom : 4px;
 }
 
+.select2-container--default .select2-results>.select2-results__options {
+	max-height: 50vh;
+}
+
 .select2-container--default .select2-results__option .select2-results__option {
   padding-left : .5em;
 }
