Fixed the menu and a few little leftovers

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7104,6 +7104,10 @@ p.reason {
 	text-align: left;
 }
 
+.selection {
+	width : 100%;
+}
+
 .select2-container--default .select2-selection--multiple .select2-selection__choice {
 	margin-top    : 2px;
 	margin-bottom : 2px;
@@ -7116,12 +7120,11 @@ p.reason {
 }
 
 .select2-container--default .select2-selection--single .select2-selection__placeholder {
-	font-size: 12px;
+	font-size     : 12px;
+	padding-left  : 2px;
+	padding-right : 2px;
 }
 
-.selection {
-	width      : 99% !important;
-}
 
 .selection_text {
 	font-family : open_sans, Tahoma, Arial, sans-serif;
