conquest of the debate.us issue

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3601,10 +3601,15 @@ a.printbutton.buttonwhite {
 }
 
 .tabad_carousel img {
-	padding-top    : 4px;
-	padding-bottom : 4px;
-	width          : 100%;
-	height         : auto;
+	padding    : 0;
+	height     : auto;
+	margin     : auto;
+	max-width  : 100%;
+	max-height : 100px;
+}
+
+.slick-list {
+	height     : 100px !important;
 }
 
 .tabad_full {
@@ -3623,7 +3628,7 @@ a.printbutton.buttonwhite {
 }
 
 .slick-slide {
-	min-height: 108px;
+	height: 100px;
 }
 
 .slick-current {
@@ -3633,18 +3638,25 @@ a.printbutton.buttonwhite {
 .carousel.row,
 .carousel.row.even,
 .carousel.row.odd {
-	display          : inline-block;
+	height           : 100px;
 	margin           : 0;
 	vertical-align   : top;
 	background-color : transparent;
 	border           : none;
+	display          : flex !important;
+	align-items      : center;
+	justify-items    : center;
+	padding-left     : 0;
+	padding-right    : 0;
 }
 
 .carousel.row a {
-	margin   : 0;
-	padding  : 0;
-	overflow : hidden;
-	height   : auto;
+	margin      : auto;
+	padding     : 0;
+	overflow    : hidden;
+	height      : auto;
+	display     : flex !important;
+	align-items : center;
 }
 
 .slick-list {
@@ -7700,11 +7712,7 @@ span.halffixedflex,
 		max-width : 1250px;
 	}
 
-	.tabad_carousel {
-		width: 72%;
-	}
-
-	.main {
+	.main, .tabad_carousel {
 		width: 72%;
 	}
 
@@ -7830,14 +7838,6 @@ span.halffixedflex,
 		padding          : 0;
 	}
 
-	.tabad_carousel {
-		width: 72%;
-	}
-
-	.main {
-		width: 72%;
-	}
-
 	.main.mainfull {
 		width : 99%;
 		float : none;
@@ -7848,9 +7848,10 @@ span.halffixedflex,
 	}
 
 	#wrapper {
-		width      : 99%;
-		min-width  : 680px;
-		padding    : 0;
+		width         : 100%;
+		min-width     : 680px;
+		padding-left  : 2px;
+		padding-right : 2px;
 	}
 
 	#toprow {
@@ -8019,22 +8020,6 @@ span.halffixedflex,
 		max-height : 100%;
 	}
 
-	.slick-slide {
-		min-height     : 92px;
-		vertical-align : middle;
-	}
-
-	.slick-slide .carousel {
-		padding-top    : 1px;
-		padding-bottom : 1px;
-		min-height     : 92px;
-		vertical-align : middle;
-	}
-
-	.tabad_full {
-		width : 94%;
-	}
-
 	#content {
 		display          : block;
 		position         : relative;
@@ -8042,21 +8027,6 @@ span.halffixedflex,
 		background-color : var(--lightest-cool-gray);
 		margin           : 0;
 		padding          : 0;
-	}
-
-	.tabad_carousel {
-		height : auto;
-	}
-
-	.tabad_carousel img {
-		width: 100%;
-		height: auto;
-	}
-
-	#wrapper {
-		width      : 99%;
-		min-width  : 680px;
-		padding    : 0;
 	}
 
 	#toprow {
@@ -8426,9 +8396,13 @@ span.halffixedflex,
 		color: var(--darker-blue);
 	}
 
+	.tabad_carousel {
+		width : 100%;
+	}
+
 	.main, .mainfull {
 		padding-left : 1%;
-		width        : 98%;
+		width        : 100%;
 	}
 
 	.menu {
@@ -8472,39 +8446,8 @@ span.halffixedflex,
 		color            : var(--lightest-yellow);
 	}
 
-	.tabad_carousel {
-		width   : 100%;
-		padding : 0px;
-		margin  : 0px;
-		height  : auto;
-	}
-
 	h1 {
 		font-size: 2em;
-	}
-
-	.tabad_carousel img {
-		top    : -15px;
-		width  : 100%;
-		height : auto;
-	}
-
-	.carousel.row,
-	.carousel.row.even,
-	.carousel.row.odd,
-	.carousel.row a {
-		height: auto;
-		padding: 0;
-	}
-
-	.carousel.row {
-		padding-bottom : 3%;
-		padding-left   : 2px;
-		padding-right  : 2px;
-		border: 1px solid white;
-	}
-
-	.carousel.row a {
 	}
 
 	.menuburger:hover {
@@ -8532,29 +8475,9 @@ span.halffixedflex,
 		display    : inline-block;
 	}
 
-	.slick-slide {
-		min-height     : 72px;
-		vertical-align : middle;
-		height         : auto;
-		padding-top    : 0px;
-	}
-
-	.slick-slide .carousel {
-		padding-top    : 1px;
-		padding-bottom : 1px;
-		min-height     : 72px;
-		vertical-align : middle;
-	}
-
 	.flexrow.menuright {
 		text-align: left;
 		flex-flow  : row;
-	}
-
-	.tabad_carousel img {
-		top    : -15px;
-		width  : 100%;
-		height : auto;
 	}
 
 	#toprow a.fa.fa-sm {
@@ -8590,7 +8513,6 @@ span.halffixedflex,
 		padding-bottom : 8px;
 		margin-top     : 4px;
 	}
-
 }
 
 @media only screen and (max-width: 500px) {
@@ -8601,6 +8523,10 @@ span.halffixedflex,
 	.smallishcell,
 	.smallcell {
 		width: 16px;
+	}
+
+	.slick-list, .carousel.row {
+		height     : 80px !important;
 	}
 }
 
