--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3480,6 +3480,14 @@ a.printbutton,
 	justify-content : center;
 }
 
+.draggable .fa-sm {
+	font-size: 10px;
+}
+
+.draggable .fa-xs {
+	font-size: 8px;
+}
+
 a.fa-sm {
 	height     : 24px;
 	width      : 24px;
