Some tweaks to the menu both modes

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -30,7 +30,8 @@
 	--darker-red   : #8E1600;
 
 	--barely-yellow   : #fef8ef;
-	--lightest-yellow : #FFECBD;
+	--lightest-yellow : #fbefd2;
+	--lighter-yellow  : #FFECBD;
 	--light-yellow    : #FFDB84;
 	--medium-yellow   : #FFD267;
 	--dark-yellow     : #FFB400;
@@ -5881,7 +5882,7 @@ way to fit your requirements.
 
 #nav li a.top_link {
 	display         : block;
-	color           : var(--lightest-yellow);
+	color           : var(--lighter-yellow);
 	text-decoration : none;
 	font-size       : 15px;
 	cursor          : pointer;
@@ -5935,7 +5936,7 @@ way to fit your requirements.
 
 #nav li {
 	line-height    : 20px;
-	padding-bottom : 15px;
+	padding-bottom : 0px;
 }
 
 #nav li:hover {
@@ -6001,7 +6002,7 @@ way to fit your requirements.
 
 #nav li:hover ul.sub {
 	left        : -8px;
-	top         : 34px;
+	top         : 36px;
 	margin-left : 1px;
 	white-space : nowrap;
 	width       : 128px;
@@ -6018,16 +6019,12 @@ way to fit your requirements.
 	position      : relative;
 	float         : left;
 	width         : 100%;
-	margin-bottom : -16px;
+	margin-bottom : 0px;
 	margin-top    : 0;
 }
 
-#nav li:hover ul.sub.narrow li a {
-	font-family     : Raleway-Medium;
-	font-size       : 13px;
-}
-
 #nav li:hover ul.sub li a {
+
 	font-family     : Raleway-Medium;
 	text-align      : center;
 	display         : block;
@@ -6084,12 +6081,6 @@ way to fit your requirements.
 	margin		: 0;
 	padding		: 0;
 	list-style	: none;
-}
-
-.narrow li a {
-	font-size      : 16pt;
-	padding-top    : 6px !important;
-	padding-bottom : 6px !important;
 }
 
 li.smallish {
