--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1793,10 +1793,13 @@ tr.fixed td, tr.fixed th {
 	padding-bottom	: 2px;
 }
 
+tr.yellowrow:first-child {
+	border-left   : 1px solid var(--dark-yellow);
+}
+
 tr.yellowrow th {
 	border-top    : 1px solid var(--dark-yellow);
-	border-left   : 1px solid var(--medium-yellow);
-	border-right  : 1px solid var(--medium-yellow);
+	border-right  : 1px solid var(--dark-yellow);
 	border-bottom : 2px solid var(--medium-yellow);
 }
 
