I think this changes it

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -4313,14 +4313,14 @@ a.instream {
 }
 
 a.inline {
-	display               : inline !important;
-	font-size             : 14px;
-	padding               : 0 !important;
-	margin                : 0 !important;
+	display               : inline;
+	padding               : 0;
+	margin                : 0;
 	vertical-align        : baseline;
-	text-decoration-line  : underline !important;
-	text-decoration-style : dotted !important;
-	text-decoration-color : var(--medium-red) !important;
+	text-decoration-line  : underline;
+	text-decoration-style : dotted;
+	text-underline-offset : 4px;
+	text-decoration-color : var(--medium-red);
 }
 
 a.inline.bigger {
