Joyous mobile narrower

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -204,7 +204,8 @@ body {
 	flex        : 1 0 auto;
 	width       : 100%;
 	flex-flow   : row nowrap;
-	align-items : center;
+	align-items : flex-start;
+	padding-top : 4px;
 }
 
 #header {
@@ -230,7 +231,6 @@ body {
 	padding        : 0;
 	padding-bottom : 4px;
 	padding-left   : 4px;
-	max-height     : 48px;
 }
 
 #logo a {
@@ -518,26 +518,70 @@ p.onesignal-customlink-explanation.medium {
 #search {
     position         : relative;
 	background-color : rgba(255, 255, 255, 0.24);
+	margin-left      : 8px;
+	margin-right     : 4px;
+    overflow         : hidden;
+	padding          : 0;
+	padding-left     : 4px;
+	padding-right    : 4px;
+}
+
+#mobile_searchbox {
+    position         : relative;
+	background-color : var(--light-gray);
 	margin-left      : 4px;
 	margin-right     : 4px;
     overflow         : hidden;
 	padding          : 0;
+	padding-left     : 4px;
+	padding-right    : 4px;
 }
 
+#mobile_searchbox input[type="text"]#searchtext,
 #search input[type="text"]#searchtext {
 	width: 100%;
 }
 
+#mobile_searchbox input[type="text"],
+#mobile_searchbox input[type="number"] {
+    border       : 1px solid var(--darker-blue);
+    color        : var(--darker-blue);
+    width        : 100%;
+	font-size    : 14px;
+	font-weight  : 600;
+	display      : inline;
+    margin-left  : 4px;
+    margin-right : 4px;
+	margin-top   : 4px;
+}
+
+#mobile_search input[type="text"], #mobile_search input[type="number"] {
+	font-size : 14px;
+}
+
+#mobile_search button {
+    background : none;
+	color      : var(--dark-blue);
+    border     : 0;
+    cursor     : pointer !important;
+    font-size  : 20px;
+    height     : 32px;
+	margin     : 0;
+	padding    : 0;
+}
+
+
 #search input[type="text"],
 #search input[type="number"] {
-    background  : none repeat scroll 0 0 transparent;
-    border      : 0 none !important;
-    color       : var(--background-white);
-    width       : 76%;
-	font-size   : 16px;
-	display     : inline;
-    margin-left : 4px;
-	margin-top  : 4px;
+    background   : none repeat scroll 0 0 transparent;
+    border       : 0 none !important;
+    color        : var(--background-white);
+    width        : 100%;
+	font-size    : 16px;
+	display      : inline;
+    margin-left  : 4px;
+    margin-right : 4px;
+	margin-top   : 4px;
 }
 
 button:focus {outline:none;}
@@ -7701,6 +7745,27 @@ span.halffixedflex,
 #toprow a#mobile_search {
 	display: none;
 }
+#mobile_searchtext {
+	width: 100%;
+}
+
+#mobileSearch {
+	display: none;
+}
+
+#mobileSearch button.fa-search:hover {
+	background-color : var(--dark-blue);
+}
+
+#mobileSearch button.fa-search {
+	background-color : var(--darker-blue);
+	color            : var(--background-white);
+	width            : 32px;
+	font-size        : 20px;
+	height           : auto;
+	padding-top      : 4px;
+	padding-bottom   : 4px;
+}
 
 @media only screen and (max-width: 1300px) {
 
@@ -7892,6 +7957,10 @@ span.halffixedflex,
 
 @media only screen and (max-width: 1000px) {
 
+	#mobileSearch {
+		display: block;
+	}
+
 	#push-subscribe {
 		white-space    : normal;
 		position       : absolute;
@@ -7987,7 +8056,8 @@ span.halffixedflex,
 		flex        : 1 0 auto;
 		width       : 100%;
 		flex-flow   : row nowrap;
-		align-items : center;
+		align-items : flex-start;
+		padding-top : 4px;
 	}
 
 	#header {
@@ -7997,10 +8067,6 @@ span.halffixedflex,
 		padding    : 0;
 		min-width  : 678px;
 		max-width  : 1199px;
-	}
-
-	#search input[type="text"], #search input[type="number"] {
-		font-size : 14px;
 	}
 
 	#logo {
@@ -8185,6 +8251,10 @@ span.halffixedflex,
 		text-align     : right !important;
 		padding-bottom : 8px !important;
 	}
+
+	#logo a img {
+		max-height   : 54px;
+	}
 }
 
 .onlysmall,
@@ -8308,7 +8378,7 @@ span.halffixedflex,
 		width          : 24px;
 		margin-right   : 3px;
 		border         : 1px solid var(--neutral-gray);
-		font-size      : 20px !important;
+		font-size      : 20px;
 		padding        : 2px;
 		padding-top    : 3px;
 		text-align     : center;
@@ -8390,13 +8460,6 @@ span.halffixedflex,
 		display: none;
 	}
 
-	#search {
-		background-color: var(--light-gray);
-	}
-
-	#search input[type="text"] {
-		color: var(--darker-blue);
-	}
 
 	.tabad_carousel {
 		width : 100%;
@@ -8515,6 +8578,7 @@ span.halffixedflex,
 		padding-bottom : 8px;
 		margin-top     : 4px;
 	}
+
 }
 
 @media only screen and (max-width: 500px) {
@@ -8529,6 +8593,55 @@ span.halffixedflex,
 
 	.slick-list, .carousel.row {
 		height     : 80px !important;
+	}
+}
+
+@media only screen and (max-width: 400px) {
+	#menus {
+		width: 75%;
+	}
+	.hamburger {
+		width: 25%;
+	}
+
+	#nav li a.top_link,
+	#nav li a.top_link span.down {
+		width: 36px;
+	}
+
+	#inbox_count {
+		left: -8px;
+	}
+
+	#toprow a#push-bell,
+	#toprow a#tabroom_inbox,
+	#toprow a.fa,
+	#toprow a.fa.sm {
+		padding-left  : 0px;
+		padding-right : 0px;
+		text-align    : center;
+		margin-right  : 4px;
+		width         : 24px;
+		height        : 22px;
+		font-size     : 18px;
+		padding       : 1px;
+		padding-top   : 2px;
+	}
+
+	#toprow a#tabroom_inbox {
+		padding-right : 0px;
+		padding-left  : 4px;
+		padding-top   : 3px;
+		width         : 20px;
+	}
+
+	#toprow a#push-bell {
+		padding-top: 3px;
+		margin-right: 1px;
+	}
+
+	span#mobile_searchbox button {
+		color: var(--background-white);
 	}
 }
 
