I guess I was cheating before

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -206,6 +206,7 @@ body {
 	flex-flow   : row nowrap;
 	align-items : flex-start;
 	padding-top : 4px;
+	max-height  : 48px;
 }
 
 #header {
@@ -7957,6 +7958,9 @@ span.halffixedflex,
 }
 
 @media only screen and (max-width: 1000px) {
+	#headerarch {
+		max-height  : none;
+	}
 
 	#mobileSearch {
 		display: block;
