--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -525,6 +525,7 @@ p.onesignal-customlink-explanation.medium {
 	padding          : 0;
 	padding-left     : 4px;
 	padding-right    : 4px;
+	max-width        : 256px;
 }
 
 #mobile_searchbox {
@@ -1304,6 +1305,15 @@ span.halffixedflex,
 
 .halffixedflex.rightalign {
 	align-items     : flex-end;
+}
+
+.doublejudgeheight {
+	box-sizing  : border-box;
+	height      : 50px !important;
+	margin      : 0;
+	padding     : 0;
+	overflow    : hidden;
+	line-height : 48px;
 }
 
 .judgeheight {
