Cred has more cred

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -123,18 +123,6 @@ input[type="text"].even {
 	font-style     : italic;
 }
 
-input[type="text"].truefull,
-input[type="password"].truefull,
-input[type="url"].truefull,
-input[type="tel"].truefull,
-input[type="email"].truefull,
-input[type="number"].truefull {
-	padding-left  : 1%;
-	padding-right : 1%;
-	width         : 94%;
-}
-
-
 input[type="text"].smaller,
 input[type="password"].smaller,
 input[type="url"].smaller,
@@ -150,6 +138,7 @@ input[type="number"].smaller {
 
 input[type="tel"] {
 	padding-top    : 7.2px;
+	padding-left   : 8px;
 	padding-bottom : 6px;
 	margin-top     : 2px;
 	margin-bottom  : 2px;
@@ -1006,6 +995,15 @@ input[type="number"].smaller {
 	line-height    : 18px;
 }
 
+.row input[type="number"] {
+	width          : 100%;
+	margin-top     : 2px;
+	margin-bottom  : 2px;
+	padding        : 8px;
+	padding-right  : 10px;
+	padding-bottom : 7px;
+	padding-top    : 6px;
+}
 .row input[type="number"].smaller {
 	padding-top    : 4px;
 	padding-bottom : 5px;
@@ -4687,14 +4685,18 @@ form {
 	vertical-align : top;
 }
 
+div.flexrow.pagefull,
+div.pagefull,
 .pagefull {
-	margin         : 0;
-	padding-right  : .25%;
-	padding-left   : .25%;
-	padding-top    : 6px;
-	padding-bottom : 6px;
-	width          : 99.6%;
-	box-sizing     : border-box;
+	display         : flex;
+	justify-content : space-between;
+	margin          : 0;
+	padding         : 0;
+	padding-bottom  : 6px;
+	width           : 100%;
+	box-sizing      : border-box;
+	align-content   : center;
+	align-items     : start;
 }
 
 .pagecolumns:after,
@@ -4719,6 +4721,20 @@ div.pagecolumns:after {
 
 .centeralign div.pagefull {
 	display        : inline-block;
+}
+
+form span.pagehalf:first-child,
+.pagefull span:first-child {
+	padding-right: 2px;
+}
+
+form span.pagehalf:first-child,
+.pagefull span:last-child {
+	padding-left: 2px;
+}
+
+.pagefull .pagehalf {
+	width : 50%;
 }
 
 .truehalf,
@@ -5017,12 +5033,6 @@ div.main span.half.smidge, div.main span span.half.smidge {
 .half.nospace {
 	width   : 48%;
 	padding : 0;
-	margin  : 0;
-}
-
-.truefull {
-	display : block;
-	padding : .5%;
 	margin  : 0;
 }
 
