--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -4692,11 +4692,23 @@ div.pagefull,
 	justify-content : space-between;
 	margin          : 0;
 	padding         : 0;
-	padding-bottom  : 6px;
+	padding-bottom  : 2px;
+	padding-top     : 2px;
 	width           : 100%;
 	box-sizing      : border-box;
 	align-content   : center;
-	align-items     : start;
+	align-items     : center;
+}
+
+div.flexrow.pagefull.rightalign,
+.flexrow.pagefull.rightalign,
+div.pagefull.rightalign,
+.pagefull.rightalign {
+	justify-content : end;
+}
+
+.libl.pagefull, .libl.flexrow, .libl.row, .libl.row {
+	border: 1px solid var(--light-blue);
 }
 
 .pagecolumns:after,
@@ -4723,12 +4735,28 @@ div.pagecolumns:after {
 	display        : inline-block;
 }
 
+tr.row td:first-child {
+	border-left: 1px solid var(--light-gray);
+}
+
+tr.row td:last-child {
+	border-right: 1px solid var(--light-gray);
+}
+
+form span.pagehalf:first-child .row {
+	border-left: 1px solid var(--border-gray);
+}
+
+form span.pagehalf:last-child .row {
+	border-right: 1px solid var(--border-gray);
+}
+
 form span.pagehalf:first-child,
 .pagefull span:first-child {
 	padding-right: 2px;
 }
 
-form span.pagehalf:first-child,
+form span.pagehalf:last-child,
 .pagefull span:last-child {
 	padding-left: 2px;
 }
