CSS problem on passwd.  Saving entry code with name codes

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -4685,6 +4685,9 @@ form {
 	vertical-align : top;
 }
 
+.flexwrap {
+}
+
 div.flexrow.pagefull,
 div.pagefull,
 .pagefull {
@@ -4697,7 +4700,7 @@ div.pagefull,
 	width           : 100%;
 	box-sizing      : border-box;
 	align-content   : center;
-	align-items     : center;
+	align-items     : start;
 }
 
 div.flexrow.pagefull.rightalign,
@@ -7426,6 +7429,8 @@ td.flex,
 span.flexrow.wrap,
 div.flexrow.wrap,
 td.flex.wrap,
+.flexwrap,
+.pagefull.wrap,
 .flexrow.wrap {
 	flex-wrap: wrap;
 }
