--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -5990,6 +5990,13 @@ way to fit your requirements.
 	margin-left     : 5px;
 }
 
+#nav.checker li a.top_link {
+	width : 118px;
+}
+#nav.checker li a.top_link span.down {
+	width : 116px;
+}
+
 #nav li a.top_link span.down.text {
 	display: block;
 }
