Minor formatting ish

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -570,8 +570,8 @@ p.onesignal-customlink-explanation.medium {
     width        : 100%;
 	font-size    : 16px;
 	display      : inline;
-    margin-left  : 4px;
-    margin-right : 4px;
+    margin-left  : 2px;
+    margin-right : 2px;
 	margin-top   : 4px;
 }
 
@@ -999,10 +999,11 @@ input[type="number"].smaller {
 	width          : 100%;
 	margin-top     : 2px;
 	margin-bottom  : 2px;
-	padding        : 8px;
-	padding-right  : 10px;
+	padding-left   : 3px;
+	padding-right  : 2px;
 	padding-bottom : 7px;
 	padding-top    : 6px;
+	box-sizing : border-box;
 }
 .row input[type="number"].smaller {
 	padding-top    : 4px;
