--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -4832,6 +4832,13 @@ div.main span.half.smidge, div.main span span.half.smidge {
 	width : 30.5%;
 }
 
+div.padlesskid p {
+	padding-top    : 2px;
+	padding-bottom : 2px;
+	margin-top     : 2px;
+	margin-bottom  : 2px;
+}
+
 .third.padless {
 	width : 30%;
 }
