only a few ways to do it right. lotsa ways to mess it up

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2447,14 +2447,30 @@ div.borderleft {
 	border-left : 1px solid var(--light-gray);
 }
 
+td.blueborderleft,
+th.blueborderleft,
 span.blueborderleft,
 div.blueborderleft {
 	border-left : 2px solid var(--dark-blue);
 }
 
+td.ltblueborderleft,
+th.ltblueborderleft,
 span.ltblueborderleft,
 div.ltblueborderleft {
 	border-left : 1px solid var(--dark-blue);
+}
+
+td.ltblueborderright,
+th.ltblueborderright,
+span.ltblueborderright,
+div.ltblueborderright {
+	border-right : 1px solid var(--dark-blue);
+}
+
+tr.ltbluebordertop td,
+tr.ltbluebordertop th {
+	border-top : 1px solid var(--dark-blue);
 }
 
 .borderright {
