--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2468,6 +2468,8 @@ div.ltblueborderright {
 	border-right : 1px solid var(--dark-blue);
 }
 
+span.ltbluebordertop,
+div.ltbluebordertop,
 tr.ltbluebordertop td,
 tr.ltbluebordertop th {
 	border-top : 1px solid var(--dark-blue);
@@ -5194,15 +5196,21 @@ a.block {
 	width : 49.25%;
 }
 
-.sidenote a.full, .sidenote a.block, .sidenote p.full, .sidenote p.block,
-.sidenote div.full, .sidenote div.block, .sidenote span.full, .sidenote span.block {
+.sidenote a.full,
+.sidenote a.block,
+.sidenote p.full,
+.sidenote p.block,
+.sidenote div.full,
+.sidenote div.block,
+.sidenote span.full,
+.sidenote span.block {
 	width          : 99%;
 	display        : block;
 	margin-left    : .5%;
 	margin-right   : .5%;
 	margin         : 0;
-	padding        : 0;
 	padding-left   : 4px;
+	padding-right  : 4px;
 	padding-top    : 6px;
 	padding-bottom : 6px;
 	margin-bottom  : 3px;
@@ -7278,9 +7286,19 @@ p.reason {
 .sidenote div.full span.select2-container,
 .sidenote div.full span.select2-selection__rendered,
 .sidenote div.full span.selection {
-	margin       : 0;
-	padding      : 0;
-	padding-left : 2px;
+	margin        : 0;
+	padding       : 0;
+	box-sizing    : border-box;
+}
+
+.sidenote div.full span.select2-selection__rendered {
+	padding-left  : 8px;
+	padding-right : 8px;
+}
+
+.select2-dropdown {
+	padding-left  : 4px;
+	padding-right : 4px;
 }
 
 .sidenote div.full span.select2-container .select2-selection--multiple {
@@ -7303,10 +7321,6 @@ p.reason {
 
 ul .select2-results__options {
 	font-size: 100%;
-}
-
-.select2-container--default .select2-selection--single .select2-selection__rendered {
-	line-height: 24px;
 }
 
 span.select2.select2-container {
@@ -7343,6 +7357,7 @@ span.dropdown-wrapper {
 
 li.select2-results__option {
 	line-height: unset;
+	display: flex;
 }
 
 .select2-results__option {
