Hover hover dream and doubt

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1801,7 +1801,7 @@ table.hasResizable {
 
 table.hasResizable tr td,
 table.hasResizable tr th {
-	overflow  : hidden;
+	overflow-x  : clip;
 }
 
 td  {
