Wrapping and rapping

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7356,8 +7356,9 @@ span.dropdown-wrapper {
 }
 
 li.select2-results__option {
-	line-height: unset;
-	display: flex;
+	line-height : unset;
+	display     : flex;
+	flex-wrap   : wrap;
 }
 
 .select2-results__option {
